# HabitsTracker

./: .coverage  .env.docker  .env.example  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
.github/workflows/: docker-deploy.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  tasks.py  telegram.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
nginx/: nginx.conf
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
